// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/form/demo/advanced-search.md correctly 1`] = `
<div>
  <form
    class="wmstool-form wmstool-form-horizontal wmstool-advanced-search-form"
  >
    <div
      class="wmstool-row"
      style="margin-left:-12px;margin-right:-12px"
    >
      <div
        class="wmstool-col-8"
        style="padding-left:12px;padding-right:12px;display:block"
      >
        <div
          class="wmstool-row wmstool-form-item"
        >
          <div
            class="wmstool-form-item-label"
          >
            <label
              class=""
              for="field-0"
              title="Field 0"
            >
              Field 0
            </label>
          </div>
          <div
            class="wmstool-form-item-control-wrapper"
          >
            <div
              class="wmstool-form-item-control "
            >
              <input
                class="wmstool-input"
                data-__field="[object Object]"
                data-__meta="[object Object]"
                id="field-0"
                placeholder="placeholder"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="wmstool-col-8"
        style="padding-left:12px;padding-right:12px;display:block"
      >
        <div
          class="wmstool-row wmstool-form-item"
        >
          <div
            class="wmstool-form-item-label"
          >
            <label
              class=""
              for="field-1"
              title="Field 1"
            >
              Field 1
            </label>
          </div>
          <div
            class="wmstool-form-item-control-wrapper"
          >
            <div
              class="wmstool-form-item-control "
            >
              <input
                class="wmstool-input"
                data-__field="[object Object]"
                data-__meta="[object Object]"
                id="field-1"
                placeholder="placeholder"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="wmstool-col-8"
        style="padding-left:12px;padding-right:12px;display:block"
      >
        <div
          class="wmstool-row wmstool-form-item"
        >
          <div
            class="wmstool-form-item-label"
          >
            <label
              class=""
              for="field-2"
              title="Field 2"
            >
              Field 2
            </label>
          </div>
          <div
            class="wmstool-form-item-control-wrapper"
          >
            <div
              class="wmstool-form-item-control "
            >
              <input
                class="wmstool-input"
                data-__field="[object Object]"
                data-__meta="[object Object]"
                id="field-2"
                placeholder="placeholder"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="wmstool-col-8"
        style="padding-left:12px;padding-right:12px;display:block"
      >
        <div
          class="wmstool-row wmstool-form-item"
        >
          <div
            class="wmstool-form-item-label"
          >
            <label
              class=""
              for="field-3"
              title="Field 3"
            >
              Field 3
            </label>
          </div>
          <div
            class="wmstool-form-item-control-wrapper"
          >
            <div
              class="wmstool-form-item-control "
            >
              <input
                class="wmstool-input"
                data-__field="[object Object]"
                data-__meta="[object Object]"
                id="field-3"
                placeholder="placeholder"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="wmstool-col-8"
        style="padding-left:12px;padding-right:12px;display:block"
      >
        <div
          class="wmstool-row wmstool-form-item"
        >
          <div
            class="wmstool-form-item-label"
          >
            <label
              class=""
              for="field-4"
              title="Field 4"
            >
              Field 4
            </label>
          </div>
          <div
            class="wmstool-form-item-control-wrapper"
          >
            <div
              class="wmstool-form-item-control "
            >
              <input
                class="wmstool-input"
                data-__field="[object Object]"
                data-__meta="[object Object]"
                id="field-4"
                placeholder="placeholder"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="wmstool-col-8"
        style="padding-left:12px;padding-right:12px;display:block"
      >
        <div
          class="wmstool-row wmstool-form-item"
        >
          <div
            class="wmstool-form-item-label"
          >
            <label
              class=""
              for="field-5"
              title="Field 5"
            >
              Field 5
            </label>
          </div>
          <div
            class="wmstool-form-item-control-wrapper"
          >
            <div
              class="wmstool-form-item-control "
            >
              <input
                class="wmstool-input"
                data-__field="[object Object]"
                data-__meta="[object Object]"
                id="field-5"
                placeholder="placeholder"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="wmstool-col-8"
        style="padding-left:12px;padding-right:12px;display:none"
      >
        <div
          class="wmstool-row wmstool-form-item"
        >
          <div
            class="wmstool-form-item-label"
          >
            <label
              class=""
              for="field-6"
              title="Field 6"
            >
              Field 6
            </label>
          </div>
          <div
            class="wmstool-form-item-control-wrapper"
          >
            <div
              class="wmstool-form-item-control "
            >
              <input
                class="wmstool-input"
                data-__field="[object Object]"
                data-__meta="[object Object]"
                id="field-6"
                placeholder="placeholder"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="wmstool-col-8"
        style="padding-left:12px;padding-right:12px;display:none"
      >
        <div
          class="wmstool-row wmstool-form-item"
        >
          <div
            class="wmstool-form-item-label"
          >
            <label
              class=""
              for="field-7"
              title="Field 7"
            >
              Field 7
            </label>
          </div>
          <div
            class="wmstool-form-item-control-wrapper"
          >
            <div
              class="wmstool-form-item-control "
            >
              <input
                class="wmstool-input"
                data-__field="[object Object]"
                data-__meta="[object Object]"
                id="field-7"
                placeholder="placeholder"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="wmstool-col-8"
        style="padding-left:12px;padding-right:12px;display:none"
      >
        <div
          class="wmstool-row wmstool-form-item"
        >
          <div
            class="wmstool-form-item-label"
          >
            <label
              class=""
              for="field-8"
              title="Field 8"
            >
              Field 8
            </label>
          </div>
          <div
            class="wmstool-form-item-control-wrapper"
          >
            <div
              class="wmstool-form-item-control "
            >
              <input
                class="wmstool-input"
                data-__field="[object Object]"
                data-__meta="[object Object]"
                id="field-8"
                placeholder="placeholder"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="wmstool-col-8"
        style="padding-left:12px;padding-right:12px;display:none"
      >
        <div
          class="wmstool-row wmstool-form-item"
        >
          <div
            class="wmstool-form-item-label"
          >
            <label
              class=""
              for="field-9"
              title="Field 9"
            >
              Field 9
            </label>
          </div>
          <div
            class="wmstool-form-item-control-wrapper"
          >
            <div
              class="wmstool-form-item-control "
            >
              <input
                class="wmstool-input"
                data-__field="[object Object]"
                data-__meta="[object Object]"
                id="field-9"
                placeholder="placeholder"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="wmstool-row"
    >
      <div
        class="wmstool-col-24"
        style="text-align:right"
      >
        <button
          class="wmstool-btn wmstool-btn-primary"
          type="submit"
        >
          <span>
            Search
          </span>
        </button>
        <button
          class="wmstool-btn"
          style="margin-left:8px"
          type="button"
        >
          <span>
            Clear
          </span>
        </button>
        <a
          style="margin-left:8px;font-size:12px"
        >
          Collapse 
          <i
            class="anticon anticon-down"
          />
        </a>
      </div>
    </div>
  </form>
  <div
    class="search-result-list"
  >
    Search Result List
  </div>
</div>
`;

exports[`renders ./components/form/demo/coordinated.md correctly 1`] = `
<form
  class="wmstool-form wmstool-form-horizontal"
>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-col-5 wmstool-form-item-label"
    >
      <label
        class="wmstool-form-item-required"
        for="note"
        title="Note"
      >
        Note
      </label>
    </div>
    <div
      class="wmstool-col-12 wmstool-form-item-control-wrapper"
    >
      <div
        class="wmstool-form-item-control "
      >
        <input
          class="wmstool-input"
          data-__field="[object Object]"
          data-__meta="[object Object]"
          id="note"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-col-5 wmstool-form-item-label"
    >
      <label
        class="wmstool-form-item-required"
        for="gender"
        title="Gender"
      >
        Gender
      </label>
    </div>
    <div
      class="wmstool-col-12 wmstool-form-item-control-wrapper"
    >
      <div
        class="wmstool-form-item-control "
      >
        <div
          class="wmstool-select wmstool-select-enabled"
        >
          <div
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="wmstool-select-selection
            wmstool-select-selection--single"
            role="combobox"
            tabindex="0"
          >
            <div
              class="wmstool-select-selection__rendered"
            >
              <div
                class="wmstool-select-selection__placeholder"
                style="display:block;user-select:none;-webkit-user-select:none"
                unselectable="unselectable"
              >
                Select a option and change input text above
              </div>
            </div>
            <span
              class="wmstool-select-arrow"
              style="user-select:none;-webkit-user-select:none"
              unselectable="unselectable"
            >
              <b />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-col-12 wmstool-col-offset-5 wmstool-form-item-control-wrapper"
    >
      <div
        class="wmstool-form-item-control "
      >
        <button
          class="wmstool-btn wmstool-btn-primary"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`renders ./components/form/demo/customized-form-controls.md correctly 1`] = `
<form
  class="wmstool-form wmstool-form-inline"
>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-label"
    >
      <label
        class=""
        for="price"
        title="Price"
      >
        Price
      </label>
    </div>
    <div
      class="wmstool-form-item-control-wrapper"
    >
      <div
        class="wmstool-form-item-control has-success"
      >
        <span>
          <input
            class="wmstool-input"
            style="width:65%;margin-right:3%"
            type="text"
            value="0"
          />
          <div
            class="wmstool-select wmstool-select-enabled"
            style="width:32%"
          >
            <div
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="true"
              class="wmstool-select-selection
            wmstool-select-selection--single"
              role="combobox"
              tabindex="0"
            >
              <div
                class="wmstool-select-selection__rendered"
              >
                <div
                  class="wmstool-select-selection-selected-value"
                  style="display:block;opacity:1"
                  title="RMB"
                >
                  RMB
                </div>
              </div>
              <span
                class="wmstool-select-arrow"
                style="user-select:none;-webkit-user-select:none"
                unselectable="unselectable"
              >
                <b />
              </span>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-control-wrapper"
    >
      <div
        class="wmstool-form-item-control "
      >
        <button
          class="wmstool-btn wmstool-btn-primary"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`renders ./components/form/demo/dynamic-form-item.md correctly 1`] = `
<form
  class="wmstool-form wmstool-form-horizontal"
>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-control-wrapper wmstool-col-xs-24 wmstool-col-xs-offset-0 wmstool-col-sm-20 wmstool-col-sm-offset-4"
    >
      <div
        class="wmstool-form-item-control "
      >
        <button
          class="wmstool-btn wmstool-btn-dashed"
          style="width:60%"
          type="button"
        >
          <i
            class="anticon anticon-plus"
          />
          <span>
             Add field
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-control-wrapper wmstool-col-xs-24 wmstool-col-xs-offset-0 wmstool-col-sm-20 wmstool-col-sm-offset-4"
    >
      <div
        class="wmstool-form-item-control "
      >
        <button
          class="wmstool-btn wmstool-btn-primary"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`renders ./components/form/demo/dynamic-rule.md correctly 1`] = `
<div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-col-4 wmstool-form-item-label"
    >
      <label
        class="wmstool-form-item-required"
        for="username"
        title="Name"
      >
        Name
      </label>
    </div>
    <div
      class="wmstool-col-8 wmstool-form-item-control-wrapper"
    >
      <div
        class="wmstool-form-item-control "
      >
        <input
          class="wmstool-input"
          data-__field="[object Object]"
          data-__meta="[object Object]"
          id="username"
          placeholder="Please input your name"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-col-4 wmstool-form-item-label"
    >
      <label
        class=""
        for="nickname"
        title="Nickname"
      >
        Nickname
      </label>
    </div>
    <div
      class="wmstool-col-8 wmstool-form-item-control-wrapper"
    >
      <div
        class="wmstool-form-item-control "
      >
        <input
          class="wmstool-input"
          data-__field="[object Object]"
          data-__meta="[object Object]"
          id="nickname"
          placeholder="Please input your nickname"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-col-8 wmstool-col-offset-4 wmstool-form-item-control-wrapper"
    >
      <div
        class="wmstool-form-item-control "
      >
        <label
          class="wmstool-checkbox-wrapper"
        >
          <span
            class="wmstool-checkbox"
          >
            <input
              class="wmstool-checkbox-input"
              type="checkbox"
              value="false"
            />
            <span
              class="wmstool-checkbox-inner"
            />
          </span>
          <span>
            Nickname is required
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-col-8 wmstool-col-offset-4 wmstool-form-item-control-wrapper"
    >
      <div
        class="wmstool-form-item-control "
      >
        <button
          class="wmstool-btn wmstool-btn-primary"
          type="button"
        >
          <span>
            Check
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/form/demo/form-in-modal.md correctly 1`] = `
<div>
  <button
    class="wmstool-btn wmstool-btn-primary"
    type="button"
  >
    <span>
      New Collection
    </span>
  </button>
</div>
`;

exports[`renders ./components/form/demo/global-state.md correctly 1`] = `
<div>
  <form
    class="wmstool-form wmstool-form-inline"
  >
    <div
      class="wmstool-row wmstool-form-item"
    >
      <div
        class="wmstool-form-item-label"
      >
        <label
          class="wmstool-form-item-required"
          for="username"
          title="Username"
        >
          Username
        </label>
      </div>
      <div
        class="wmstool-form-item-control-wrapper"
      >
        <div
          class="wmstool-form-item-control has-success"
        >
          <input
            class="wmstool-input"
            data-__field="[object Object]"
            data-__meta="[object Object]"
            id="username"
            type="text"
            value="benjycui"
          />
        </div>
      </div>
    </div>
  </form>
  <pre
    class="language-bash"
  >
    {
  "username": {
    "value": "benjycui"
  }
}
  </pre>
</div>
`;

exports[`renders ./components/form/demo/horizontal-login.md correctly 1`] = `
<form
  class="wmstool-form wmstool-form-inline"
>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-control-wrapper"
    >
      <div
        class="wmstool-form-item-control "
      >
        <span
          class="wmstool-input-affix-wrapper"
        >
          <span
            class="wmstool-input-prefix"
          >
            <i
              class="anticon anticon-user"
              style="color:rgba(0,0,0,.25)"
            />
          </span>
          <input
            class="wmstool-input"
            data-__field="[object Object]"
            data-__meta="[object Object]"
            id="userName"
            placeholder="Username"
            type="text"
            value=""
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-control-wrapper"
    >
      <div
        class="wmstool-form-item-control "
      >
        <span
          class="wmstool-input-affix-wrapper"
        >
          <span
            class="wmstool-input-prefix"
          >
            <i
              class="anticon anticon-lock"
              style="color:rgba(0,0,0,.25)"
            />
          </span>
          <input
            class="wmstool-input"
            data-__field="[object Object]"
            data-__meta="[object Object]"
            id="password"
            placeholder="Password"
            type="password"
            value=""
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-control-wrapper"
    >
      <div
        class="wmstool-form-item-control "
      >
        <button
          class="wmstool-btn wmstool-btn-primary"
          type="submit"
        >
          <span>
            Log in
          </span>
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`renders ./components/form/demo/layout.md correctly 1`] = `
<div>
  <form
    class="wmstool-form wmstool-form-horizontal"
  >
    <div
      class="wmstool-row wmstool-form-item"
    >
      <div
        class="wmstool-col-4 wmstool-form-item-label"
      >
        <label
          class=""
          title="Form Layout"
        >
          Form Layout
        </label>
      </div>
      <div
        class="wmstool-col-14 wmstool-form-item-control-wrapper"
      >
        <div
          class="wmstool-form-item-control "
        >
          <div
            class="wmstool-radio-group"
          >
            <label
              class="wmstool-radio-button-wrapper wmstool-radio-button-wrapper-checked"
            >
              <span
                class="wmstool-radio-button wmstool-radio-button-checked"
              >
                <input
                  checked=""
                  class="wmstool-radio-button-input"
                  type="radio"
                  value="horizontal"
                />
                <span
                  class="wmstool-radio-button-inner"
                />
              </span>
              <span>
                Horizontal
              </span>
            </label>
            <label
              class="wmstool-radio-button-wrapper"
            >
              <span
                class="wmstool-radio-button"
              >
                <input
                  class="wmstool-radio-button-input"
                  type="radio"
                  value="vertical"
                />
                <span
                  class="wmstool-radio-button-inner"
                />
              </span>
              <span>
                Vertical
              </span>
            </label>
            <label
              class="wmstool-radio-button-wrapper"
            >
              <span
                class="wmstool-radio-button"
              >
                <input
                  class="wmstool-radio-button-input"
                  type="radio"
                  value="inline"
                />
                <span
                  class="wmstool-radio-button-inner"
                />
              </span>
              <span>
                Inline
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="wmstool-row wmstool-form-item"
    >
      <div
        class="wmstool-col-4 wmstool-form-item-label"
      >
        <label
          class=""
          title="Field A"
        >
          Field A
        </label>
      </div>
      <div
        class="wmstool-col-14 wmstool-form-item-control-wrapper"
      >
        <div
          class="wmstool-form-item-control "
        >
          <input
            class="wmstool-input"
            placeholder="input placeholder"
            type="text"
          />
        </div>
      </div>
    </div>
    <div
      class="wmstool-row wmstool-form-item"
    >
      <div
        class="wmstool-col-4 wmstool-form-item-label"
      >
        <label
          class=""
          title="Field B"
        >
          Field B
        </label>
      </div>
      <div
        class="wmstool-col-14 wmstool-form-item-control-wrapper"
      >
        <div
          class="wmstool-form-item-control "
        >
          <input
            class="wmstool-input"
            placeholder="input placeholder"
            type="text"
          />
        </div>
      </div>
    </div>
    <div
      class="wmstool-row wmstool-form-item"
    >
      <div
        class="wmstool-col-14 wmstool-col-offset-4 wmstool-form-item-control-wrapper"
      >
        <div
          class="wmstool-form-item-control "
        >
          <button
            class="wmstool-btn wmstool-btn-primary"
            type="button"
          >
            <span>
              Submit
            </span>
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`renders ./components/form/demo/normal-login.md correctly 1`] = `
<form
  class="wmstool-form wmstool-form-horizontal login-form"
>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-control-wrapper"
    >
      <div
        class="wmstool-form-item-control "
      >
        <span
          class="wmstool-input-affix-wrapper"
        >
          <span
            class="wmstool-input-prefix"
          >
            <i
              class="anticon anticon-user"
              style="color:rgba(0,0,0,.25)"
            />
          </span>
          <input
            class="wmstool-input"
            data-__field="[object Object]"
            data-__meta="[object Object]"
            id="userName"
            placeholder="Username"
            type="text"
            value=""
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-control-wrapper"
    >
      <div
        class="wmstool-form-item-control "
      >
        <span
          class="wmstool-input-affix-wrapper"
        >
          <span
            class="wmstool-input-prefix"
          >
            <i
              class="anticon anticon-lock"
              style="color:rgba(0,0,0,.25)"
            />
          </span>
          <input
            class="wmstool-input"
            data-__field="[object Object]"
            data-__meta="[object Object]"
            id="password"
            placeholder="Password"
            type="password"
            value=""
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-control-wrapper"
    >
      <div
        class="wmstool-form-item-control has-success"
      >
        <label
          class="wmstool-checkbox-wrapper"
        >
          <span
            class="wmstool-checkbox wmstool-checkbox-checked"
          >
            <input
              checked=""
              class="wmstool-checkbox-input"
              data-__field="[object Object]"
              data-__meta="[object Object]"
              id="remember"
              type="checkbox"
            />
            <span
              class="wmstool-checkbox-inner"
            />
          </span>
          <span>
            Remember me
          </span>
        </label>
        <a
          class="login-form-forgot"
          href=""
        >
          Forgot password
        </a>
        <button
          class="wmstool-btn login-form-button wmstool-btn-primary"
          type="submit"
        >
          <span>
            Log in
          </span>
        </button>
        Or 
        <a
          href=""
        >
          register now!
        </a>
      </div>
    </div>
  </div>
</form>
`;

exports[`renders ./components/form/demo/register.md correctly 1`] = `
<form
  class="wmstool-form wmstool-form-horizontal"
>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-label wmstool-col-xs-24 wmstool-col-sm-8"
    >
      <label
        class="wmstool-form-item-required"
        for="email"
        title="E-mail"
      >
        E-mail
      </label>
    </div>
    <div
      class="wmstool-form-item-control-wrapper wmstool-col-xs-24 wmstool-col-sm-16"
    >
      <div
        class="wmstool-form-item-control "
      >
        <input
          class="wmstool-input"
          data-__field="[object Object]"
          data-__meta="[object Object]"
          id="email"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-label wmstool-col-xs-24 wmstool-col-sm-8"
    >
      <label
        class="wmstool-form-item-required"
        for="password"
        title="Password"
      >
        Password
      </label>
    </div>
    <div
      class="wmstool-form-item-control-wrapper wmstool-col-xs-24 wmstool-col-sm-16"
    >
      <div
        class="wmstool-form-item-control "
      >
        <input
          class="wmstool-input"
          data-__field="[object Object]"
          data-__meta="[object Object]"
          id="password"
          type="password"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-label wmstool-col-xs-24 wmstool-col-sm-8"
    >
      <label
        class="wmstool-form-item-required"
        for="confirm"
        title="Confirm Password"
      >
        Confirm Password
      </label>
    </div>
    <div
      class="wmstool-form-item-control-wrapper wmstool-col-xs-24 wmstool-col-sm-16"
    >
      <div
        class="wmstool-form-item-control "
      >
        <input
          class="wmstool-input"
          data-__field="[object Object]"
          data-__meta="[object Object]"
          id="confirm"
          type="password"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-label wmstool-col-xs-24 wmstool-col-sm-8"
    >
      <label
        class="wmstool-form-item-required"
        for="nickname"
        title=""
      >
        <span>
          Nickname 
          <i
            class="anticon anticon-question-circle-o"
          />
        </span>
      </label>
    </div>
    <div
      class="wmstool-form-item-control-wrapper wmstool-col-xs-24 wmstool-col-sm-16"
    >
      <div
        class="wmstool-form-item-control "
      >
        <input
          class="wmstool-input"
          data-__field="[object Object]"
          data-__meta="[object Object]"
          id="nickname"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-label wmstool-col-xs-24 wmstool-col-sm-8"
    >
      <label
        class="wmstool-form-item-required"
        for="residence"
        title="Habitual Residence"
      >
        Habitual Residence
      </label>
    </div>
    <div
      class="wmstool-form-item-control-wrapper wmstool-col-xs-24 wmstool-col-sm-16"
    >
      <div
        class="wmstool-form-item-control has-success"
      >
        <span
          class="wmstool-cascader-picker"
          tabindex="0"
        >
          <span
            class="wmstool-cascader-picker-label"
          >
            Zhejiang / Hangzhou / West Lake
          </span>
          <input
            autocomplete="off"
            class="wmstool-input wmstool-cascader-input "
            data-__field="[object Object]"
            data-__meta="[object Object]"
            id="residence"
            readonly=""
            type="text"
            value=""
          />
          <i
            class="anticon anticon-cross-circle wmstool-cascader-picker-clear"
          />
          <i
            class="anticon anticon-down wmstool-cascader-picker-arrow"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-label wmstool-col-xs-24 wmstool-col-sm-8"
    >
      <label
        class="wmstool-form-item-required"
        for="phone"
        title="Phone Number"
      >
        Phone Number
      </label>
    </div>
    <div
      class="wmstool-form-item-control-wrapper wmstool-col-xs-24 wmstool-col-sm-16"
    >
      <div
        class="wmstool-form-item-control "
      >
        <span
          class="wmstool-input-group-wrapper"
          style="width:100%"
        >
          <span
            class="wmstool-input-wrapper wmstool-input-group"
          >
            <span
              class="wmstool-input-group-addon"
            >
              <div
                class="wmstool-select wmstool-select-enabled"
                style="width:70px"
              >
                <div
                  aria-autocomplete="list"
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="wmstool-select-selection
            wmstool-select-selection--single"
                  role="combobox"
                  tabindex="0"
                >
                  <div
                    class="wmstool-select-selection__rendered"
                  >
                    <div
                      class="wmstool-select-selection-selected-value"
                      style="display:block;opacity:1"
                      title="+86"
                    >
                      +86
                    </div>
                  </div>
                  <span
                    class="wmstool-select-arrow"
                    style="user-select:none;-webkit-user-select:none"
                    unselectable="unselectable"
                  >
                    <b />
                  </span>
                </div>
              </div>
            </span>
            <input
              class="wmstool-input"
              data-__field="[object Object]"
              data-__meta="[object Object]"
              id="phone"
              type="text"
              value=""
            />
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-label wmstool-col-xs-24 wmstool-col-sm-8"
    >
      <label
        class="wmstool-form-item-required"
        for="website"
        title="Website"
      >
        Website
      </label>
    </div>
    <div
      class="wmstool-form-item-control-wrapper wmstool-col-xs-24 wmstool-col-sm-16"
    >
      <div
        class="wmstool-form-item-control "
      >
        <div
          class="wmstool-select-show-search wmstool-select-auto-complete wmstool-select wmstool-select-combobox wmstool-select-enabled"
        >
          <div
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="wmstool-select-selection
            wmstool-select-selection--single"
            role="combobox"
          >
            <div
              class="wmstool-select-selection__rendered"
            >
              <div
                class="wmstool-select-selection__placeholder"
                style="display:block;user-select:none;-webkit-user-select:none"
                unselectable="unselectable"
              >
                website
              </div>
              <ul>
                <li
                  class="wmstool-select-search wmstool-select-search--inline"
                >
                  <div
                    class="wmstool-select-search__field__wrap"
                  >
                    <input
                      class="wmstool-input wmstool-select-search__field"
                      type="text"
                      value=""
                    />
                    <span
                      class="wmstool-select-search__field__mirror"
                    >
                       
                    </span>
                  </div>
                </li>
              </ul>
            </div>
            <span
              class="wmstool-select-arrow"
              style="user-select:none;-webkit-user-select:none"
              unselectable="unselectable"
            >
              <b />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-label wmstool-col-xs-24 wmstool-col-sm-8"
    >
      <label
        class="wmstool-form-item-required"
        for="captcha"
        title="Captcha"
      >
        Captcha
      </label>
    </div>
    <div
      class="wmstool-form-item-control-wrapper wmstool-col-xs-24 wmstool-col-sm-16"
    >
      <div
        class="wmstool-form-item-control "
      >
        <div
          class="wmstool-row"
          style="margin-left:-4px;margin-right:-4px"
        >
          <div
            class="wmstool-col-12"
            style="padding-left:4px;padding-right:4px"
          >
            <input
              class="wmstool-input"
              data-__field="[object Object]"
              data-__meta="[object Object]"
              id="captcha"
              type="text"
              value=""
            />
          </div>
          <div
            class="wmstool-col-12"
            style="padding-left:4px;padding-right:4px"
          >
            <button
              class="wmstool-btn"
              type="button"
            >
              <span>
                Get captcha
              </span>
            </button>
          </div>
        </div>
        <div
          class="wmstool-form-extra"
        >
          We must make sure that your are a human.
        </div>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-control-wrapper wmstool-col-xs-24 wmstool-col-xs-offset-0 wmstool-col-sm-16 wmstool-col-sm-offset-8"
    >
      <div
        class="wmstool-form-item-control "
      >
        <label
          class="wmstool-checkbox-wrapper"
        >
          <span
            class="wmstool-checkbox"
          >
            <input
              class="wmstool-checkbox-input"
              data-__field="[object Object]"
              data-__meta="[object Object]"
              id="agreement"
              type="checkbox"
            />
            <span
              class="wmstool-checkbox-inner"
            />
          </span>
          <span>
            I have read the 
            <a
              href=""
            >
              agreement
            </a>
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-control-wrapper wmstool-col-xs-24 wmstool-col-xs-offset-0 wmstool-col-sm-16 wmstool-col-sm-offset-8"
    >
      <div
        class="wmstool-form-item-control "
      >
        <button
          class="wmstool-btn wmstool-btn-primary"
          type="submit"
        >
          <span>
            Register
          </span>
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`renders ./components/form/demo/time-related-controls.md correctly 1`] = `
<form
  class="wmstool-form wmstool-form-horizontal"
>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-label wmstool-col-xs-24 wmstool-col-sm-8"
    >
      <label
        class="wmstool-form-item-required"
        for="date-picker"
        title="DatePicker"
      >
        DatePicker
      </label>
    </div>
    <div
      class="wmstool-form-item-control-wrapper wmstool-col-xs-24 wmstool-col-sm-16"
    >
      <div
        class="wmstool-form-item-control "
      >
        <span
          class="wmstool-calendar-picker"
        >
          <div>
            <input
              class="wmstool-calendar-picker-input wmstool-input"
              placeholder="Select date"
              readonly=""
              value=""
            />
            <span
              class="wmstool-calendar-picker-icon"
            />
          </div>
        </span>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-label wmstool-col-xs-24 wmstool-col-sm-8"
    >
      <label
        class="wmstool-form-item-required"
        for="date-time-picker"
        title="DatePicker[showTime]"
      >
        DatePicker[showTime]
      </label>
    </div>
    <div
      class="wmstool-form-item-control-wrapper wmstool-col-xs-24 wmstool-col-sm-16"
    >
      <div
        class="wmstool-form-item-control "
      >
        <span
          class="wmstool-calendar-picker"
        >
          <div>
            <input
              class="wmstool-calendar-picker-input wmstool-input"
              placeholder="Select date"
              readonly=""
              value=""
            />
            <span
              class="wmstool-calendar-picker-icon"
            />
          </div>
        </span>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-label wmstool-col-xs-24 wmstool-col-sm-8"
    >
      <label
        class="wmstool-form-item-required"
        for="month-picker"
        title="MonthPicker"
      >
        MonthPicker
      </label>
    </div>
    <div
      class="wmstool-form-item-control-wrapper wmstool-col-xs-24 wmstool-col-sm-16"
    >
      <div
        class="wmstool-form-item-control "
      >
        <span
          class="wmstool-calendar-picker"
        >
          <div>
            <input
              class="wmstool-calendar-picker-input wmstool-input"
              placeholder="Select date"
              readonly=""
              value=""
            />
            <span
              class="wmstool-calendar-picker-icon"
            />
          </div>
        </span>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-label wmstool-col-xs-24 wmstool-col-sm-8"
    >
      <label
        class="wmstool-form-item-required"
        for="range-picker"
        title="RangePicker"
      >
        RangePicker
      </label>
    </div>
    <div
      class="wmstool-form-item-control-wrapper wmstool-col-xs-24 wmstool-col-sm-16"
    >
      <div
        class="wmstool-form-item-control "
      >
        <span
          class="wmstool-calendar-picker"
          tabindex="0"
        >
          <span
            class="wmstool-calendar-picker-input wmstool-input"
          >
            <input
              class="wmstool-calendar-range-picker-input"
              placeholder="Start date"
              readonly=""
              tabindex="-1"
              value=""
            />
            <span
              class="wmstool-calendar-range-picker-separator"
            >
               ~ 
            </span>
            <input
              class="wmstool-calendar-range-picker-input"
              placeholder="End date"
              readonly=""
              tabindex="-1"
              value=""
            />
            <span
              class="wmstool-calendar-picker-icon"
            />
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-label wmstool-col-xs-24 wmstool-col-sm-8"
    >
      <label
        class="wmstool-form-item-required"
        for="range-time-picker"
        title="RangePicker[showTime]"
      >
        RangePicker[showTime]
      </label>
    </div>
    <div
      class="wmstool-form-item-control-wrapper wmstool-col-xs-24 wmstool-col-sm-16"
    >
      <div
        class="wmstool-form-item-control "
      >
        <span
          class="wmstool-calendar-picker"
          style="width:350px"
          tabindex="0"
        >
          <span
            class="wmstool-calendar-picker-input wmstool-input"
          >
            <input
              class="wmstool-calendar-range-picker-input"
              placeholder="Start date"
              readonly=""
              tabindex="-1"
              value=""
            />
            <span
              class="wmstool-calendar-range-picker-separator"
            >
               ~ 
            </span>
            <input
              class="wmstool-calendar-range-picker-input"
              placeholder="End date"
              readonly=""
              tabindex="-1"
              value=""
            />
            <span
              class="wmstool-calendar-picker-icon"
            />
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-label wmstool-col-xs-24 wmstool-col-sm-8"
    >
      <label
        class="wmstool-form-item-required"
        for="time-picker"
        title="TimePicker"
      >
        TimePicker
      </label>
    </div>
    <div
      class="wmstool-form-item-control-wrapper wmstool-col-xs-24 wmstool-col-sm-16"
    >
      <div
        class="wmstool-form-item-control "
      >
        <span
          class="wmstool-time-picker "
        >
          <input
            class="wmstool-time-picker-input"
            placeholder="Select time"
            type="text"
            value=""
          />
          <span
            class="wmstool-time-picker-icon"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-control-wrapper wmstool-col-xs-24 wmstool-col-xs-offset-0 wmstool-col-sm-16 wmstool-col-sm-offset-8"
    >
      <div
        class="wmstool-form-item-control "
      >
        <button
          class="wmstool-btn wmstool-btn-primary"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`renders ./components/form/demo/validate-other.md correctly 1`] = `
<form
  class="wmstool-form wmstool-form-horizontal"
>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-col-6 wmstool-form-item-label"
    >
      <label
        class=""
        title="Plain Text"
      >
        Plain Text
      </label>
    </div>
    <div
      class="wmstool-col-14 wmstool-form-item-control-wrapper"
    >
      <div
        class="wmstool-form-item-control "
      >
        <span
          class="wmstool-form-text"
        >
          China
        </span>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-col-6 wmstool-form-item-label"
    >
      <label
        class="wmstool-form-item-required"
        for="select"
        title="Select"
      >
        Select
      </label>
    </div>
    <div
      class="wmstool-col-14 wmstool-form-item-control-wrapper"
    >
      <div
        class="wmstool-form-item-control "
      >
        <div
          class="wmstool-select wmstool-select-enabled"
        >
          <div
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="wmstool-select-selection
            wmstool-select-selection--single"
            role="combobox"
            tabindex="0"
          >
            <div
              class="wmstool-select-selection__rendered"
            >
              <div
                class="wmstool-select-selection__placeholder"
                style="display:block;user-select:none;-webkit-user-select:none"
                unselectable="unselectable"
              >
                Please select a country
              </div>
            </div>
            <span
              class="wmstool-select-arrow"
              style="user-select:none;-webkit-user-select:none"
              unselectable="unselectable"
            >
              <b />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-col-6 wmstool-form-item-label"
    >
      <label
        class="wmstool-form-item-required"
        for="select-multiple"
        title="Select[multiple]"
      >
        Select[multiple]
      </label>
    </div>
    <div
      class="wmstool-col-14 wmstool-form-item-control-wrapper"
    >
      <div
        class="wmstool-form-item-control "
      >
        <div
          class="wmstool-select wmstool-select-enabled"
        >
          <div
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="wmstool-select-selection
            wmstool-select-selection--multiple"
            role="combobox"
          >
            <div
              class="wmstool-select-selection__rendered"
            >
              <div
                class="wmstool-select-selection__placeholder"
                style="display:block;user-select:none;-webkit-user-select:none"
                unselectable="unselectable"
              >
                Please select favourite colors
              </div>
              <ul>
                <li
                  class="wmstool-select-search wmstool-select-search--inline"
                >
                  <div
                    class="wmstool-select-search__field__wrap"
                  >
                    <input
                      autocomplete="off"
                      class="wmstool-select-search__field"
                      id="select-multiple"
                      value=""
                    />
                    <span
                      class="wmstool-select-search__field__mirror"
                    >
                       
                    </span>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-col-6 wmstool-form-item-label"
    >
      <label
        class=""
        for="input-number"
        title="InputNumber"
      >
        InputNumber
      </label>
    </div>
    <div
      class="wmstool-col-14 wmstool-form-item-control-wrapper"
    >
      <div
        class="wmstool-form-item-control has-success"
      >
        <div
          class="wmstool-input-number"
        >
          <div
            class="wmstool-input-number-handler-wrap"
          >
            <span
              aria-disabled="false"
              aria-label="Increase Value"
              class="wmstool-input-number-handler wmstool-input-number-handler-up "
              role="button"
              unselectable="unselectable"
            >
              <span
                class="wmstool-input-number-handler-up-inner"
                unselectable="unselectable"
              />
            </span>
            <span
              aria-disabled="false"
              aria-label="Decrease Value"
              class="wmstool-input-number-handler wmstool-input-number-handler-down "
              role="button"
              unselectable="unselectable"
            >
              <span
                class="wmstool-input-number-handler-down-inner"
                unselectable="unselectable"
              />
            </span>
          </div>
          <div
            aria-valuemax="10"
            aria-valuemin="1"
            aria-valuenow="3"
            class="wmstool-input-number-input-wrap"
            role="spinbutton"
          >
            <input
              autocomplete="off"
              class="wmstool-input-number-input"
              data-__field="[object Object]"
              data-__meta="[object Object]"
              id="input-number"
              max="10"
              min="1"
              step="1"
              value="3"
            />
          </div>
        </div>
        <span
          class="wmstool-form-text"
        >
           machines
        </span>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-col-6 wmstool-form-item-label"
    >
      <label
        class=""
        for="switch"
        title="Switch"
      >
        Switch
      </label>
    </div>
    <div
      class="wmstool-col-14 wmstool-form-item-control-wrapper"
    >
      <div
        class="wmstool-form-item-control "
      >
        <span
          class="wmstool-switch"
          data-__field="[object Object]"
          data-__meta="[object Object]"
          id="switch"
          tabindex="0"
        >
          <span
            class="wmstool-switch-inner"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-col-6 wmstool-form-item-label"
    >
      <label
        class=""
        for="slider"
        title="Slider"
      >
        Slider
      </label>
    </div>
    <div
      class="wmstool-col-14 wmstool-form-item-control-wrapper"
    >
      <div
        class="wmstool-form-item-control "
      >
        <div
          class="wmstool-slider wmstool-slider-with-marks"
        >
          <div
            class="wmstool-slider-rail"
          />
          <div
            class="wmstool-slider-track"
            style="visibility:visible;left:0%;width:0%"
          />
          <div
            class="wmstool-slider-step"
          >
            <span
              class="wmstool-slider-dot wmstool-slider-dot-active"
              style="left:0%"
            />
            <span
              class="wmstool-slider-dot"
              style="left:20%"
            />
            <span
              class="wmstool-slider-dot"
              style="left:40%"
            />
            <span
              class="wmstool-slider-dot"
              style="left:60%"
            />
            <span
              class="wmstool-slider-dot"
              style="left:80%"
            />
            <span
              class="wmstool-slider-dot"
              style="left:100%"
            />
          </div>
          <div
            aria-disabled="false"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="0"
            class="wmstool-slider-handle"
            role="slider"
            style="left:0%"
            tabindex="0"
          />
          <div
            class="wmstool-slider-mark"
          >
            <span
              class="wmstool-slider-mark-text wmstool-slider-mark-text-active"
              style="width:18%;margin-left:-9%;left:0%"
            >
              A
            </span>
            <span
              class="wmstool-slider-mark-text"
              style="width:18%;margin-left:-9%;left:20%"
            >
              B
            </span>
            <span
              class="wmstool-slider-mark-text"
              style="width:18%;margin-left:-9%;left:40%"
            >
              C
            </span>
            <span
              class="wmstool-slider-mark-text"
              style="width:18%;margin-left:-9%;left:60%"
            >
              D
            </span>
            <span
              class="wmstool-slider-mark-text"
              style="width:18%;margin-left:-9%;left:80%"
            >
              E
            </span>
            <span
              class="wmstool-slider-mark-text"
              style="width:18%;margin-left:-9%;left:100%"
            >
              F
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-col-6 wmstool-form-item-label"
    >
      <label
        class=""
        for="radio-group"
        title="Radio.Group"
      >
        Radio.Group
      </label>
    </div>
    <div
      class="wmstool-col-14 wmstool-form-item-control-wrapper"
    >
      <div
        class="wmstool-form-item-control "
      >
        <div
          class="wmstool-radio-group"
          id="radio-group"
        >
          <label
            class="wmstool-radio-wrapper"
          >
            <span
              class="wmstool-radio"
            >
              <input
                class="wmstool-radio-input"
                type="radio"
                value="a"
              />
              <span
                class="wmstool-radio-inner"
              />
            </span>
            <span>
              item 1
            </span>
          </label>
          <label
            class="wmstool-radio-wrapper"
          >
            <span
              class="wmstool-radio"
            >
              <input
                class="wmstool-radio-input"
                type="radio"
                value="b"
              />
              <span
                class="wmstool-radio-inner"
              />
            </span>
            <span>
              item 2
            </span>
          </label>
          <label
            class="wmstool-radio-wrapper"
          >
            <span
              class="wmstool-radio"
            >
              <input
                class="wmstool-radio-input"
                type="radio"
                value="c"
              />
              <span
                class="wmstool-radio-inner"
              />
            </span>
            <span>
              item 3
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-col-6 wmstool-form-item-label"
    >
      <label
        class=""
        for="radio-button"
        title="Radio.Button"
      >
        Radio.Button
      </label>
    </div>
    <div
      class="wmstool-col-14 wmstool-form-item-control-wrapper"
    >
      <div
        class="wmstool-form-item-control "
      >
        <div
          class="wmstool-radio-group"
          id="radio-button"
        >
          <label
            class="wmstool-radio-button-wrapper"
          >
            <span
              class="wmstool-radio-button"
            >
              <input
                class="wmstool-radio-button-input"
                type="radio"
                value="a"
              />
              <span
                class="wmstool-radio-button-inner"
              />
            </span>
            <span>
              item 1
            </span>
          </label>
          <label
            class="wmstool-radio-button-wrapper"
          >
            <span
              class="wmstool-radio-button"
            >
              <input
                class="wmstool-radio-button-input"
                type="radio"
                value="b"
              />
              <span
                class="wmstool-radio-button-inner"
              />
            </span>
            <span>
              item 2
            </span>
          </label>
          <label
            class="wmstool-radio-button-wrapper"
          >
            <span
              class="wmstool-radio-button"
            >
              <input
                class="wmstool-radio-button-input"
                type="radio"
                value="c"
              />
              <span
                class="wmstool-radio-button-inner"
              />
            </span>
            <span>
              item 3
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-col-6 wmstool-form-item-label"
    >
      <label
        class=""
        for="rate"
        title="Rate"
      >
        Rate
      </label>
    </div>
    <div
      class="wmstool-col-14 wmstool-form-item-control-wrapper"
    >
      <div
        class="wmstool-form-item-control has-success"
      >
        <ul
          class="wmstool-rate"
          tabindex="0"
        >
          <li
            class="wmstool-rate-star wmstool-rate-star-full"
          >
            <div
              class="wmstool-rate-star-first"
            >
              <i
                class="anticon anticon-star"
              />
            </div>
            <div
              class="wmstool-rate-star-second"
            >
              <i
                class="anticon anticon-star"
              />
            </div>
          </li>
          <li
            class="wmstool-rate-star wmstool-rate-star-full"
          >
            <div
              class="wmstool-rate-star-first"
            >
              <i
                class="anticon anticon-star"
              />
            </div>
            <div
              class="wmstool-rate-star-second"
            >
              <i
                class="anticon anticon-star"
              />
            </div>
          </li>
          <li
            class="wmstool-rate-star wmstool-rate-star-full"
          >
            <div
              class="wmstool-rate-star-first"
            >
              <i
                class="anticon anticon-star"
              />
            </div>
            <div
              class="wmstool-rate-star-second"
            >
              <i
                class="anticon anticon-star"
              />
            </div>
          </li>
          <li
            class="wmstool-rate-star wmstool-rate-star-zero"
          >
            <div
              class="wmstool-rate-star-first"
            >
              <i
                class="anticon anticon-star"
              />
            </div>
            <div
              class="wmstool-rate-star-second"
            >
              <i
                class="anticon anticon-star"
              />
            </div>
          </li>
          <li
            class="wmstool-rate-star wmstool-rate-star-zero"
          >
            <div
              class="wmstool-rate-star-first"
            >
              <i
                class="anticon anticon-star"
              />
            </div>
            <div
              class="wmstool-rate-star-second"
            >
              <i
                class="anticon anticon-star"
              />
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-col-6 wmstool-form-item-label"
    >
      <label
        class=""
        for="upload"
        title="Upload"
      >
        Upload
      </label>
    </div>
    <div
      class="wmstool-col-14 wmstool-form-item-control-wrapper"
    >
      <div
        class="wmstool-form-item-control "
      >
        <span
          class=""
        >
          <div
            class="wmstool-upload wmstool-upload-select wmstool-upload-select-picture"
            style="display:"
          />
          <div
            class="wmstool-upload-list wmstool-upload-list-picture"
          />
        </span>
        <div
          class="wmstool-form-extra"
        >
          longgggggggggggggggggggggggggggggggggg
        </div>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-col-6 wmstool-form-item-label"
    >
      <label
        class=""
        for="dragger"
        title="Dragger"
      >
        Dragger
      </label>
    </div>
    <div
      class="wmstool-col-14 wmstool-form-item-control-wrapper"
    >
      <div
        class="wmstool-form-item-control "
      >
        <div
          class="dropbox"
        >
          <span
            class=""
          >
            <div
              class="wmstool-upload wmstool-upload-drag"
            />
            <div
              class="wmstool-upload-list wmstool-upload-list-text"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-col-12 wmstool-col-offset-6 wmstool-form-item-control-wrapper"
    >
      <div
        class="wmstool-form-item-control "
      >
        <button
          class="wmstool-btn wmstool-btn-primary"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`renders ./components/form/demo/validate-static.md correctly 1`] = `
<form
  class="wmstool-form wmstool-form-horizontal"
>
  <div
    class="wmstool-row wmstool-form-item wmstool-form-item-with-help"
  >
    <div
      class="wmstool-form-item-label wmstool-col-xs-24 wmstool-col-sm-5"
    >
      <label
        class=""
        title="Fail"
      >
        Fail
      </label>
    </div>
    <div
      class="wmstool-form-item-control-wrapper wmstool-col-xs-24 wmstool-col-sm-12"
    >
      <div
        class="wmstool-form-item-control has-error"
      >
        <input
          class="wmstool-input"
          id="error"
          placeholder="unavailable choice"
          type="text"
        />
        <div
          class="wmstool-form-explain"
        >
          Should be combination of numbers & alphabets
        </div>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-label wmstool-col-xs-24 wmstool-col-sm-5"
    >
      <label
        class=""
        title="Warning"
      >
        Warning
      </label>
    </div>
    <div
      class="wmstool-form-item-control-wrapper wmstool-col-xs-24 wmstool-col-sm-12"
    >
      <div
        class="wmstool-form-item-control has-warning"
      >
        <input
          class="wmstool-input"
          id="warning"
          placeholder="Warning"
          type="text"
        />
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item wmstool-form-item-with-help"
  >
    <div
      class="wmstool-form-item-label wmstool-col-xs-24 wmstool-col-sm-5"
    >
      <label
        class=""
        title="Validating"
      >
        Validating
      </label>
    </div>
    <div
      class="wmstool-form-item-control-wrapper wmstool-col-xs-24 wmstool-col-sm-12"
    >
      <div
        class="wmstool-form-item-control has-feedback is-validating"
      >
        <input
          class="wmstool-input"
          id="validating"
          placeholder="I'm the content is being validated"
          type="text"
        />
        <div
          class="wmstool-form-explain"
        >
          The information is being validated...
        </div>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-label wmstool-col-xs-24 wmstool-col-sm-5"
    >
      <label
        class=""
        title="Success"
      >
        Success
      </label>
    </div>
    <div
      class="wmstool-form-item-control-wrapper wmstool-col-xs-24 wmstool-col-sm-12"
    >
      <div
        class="wmstool-form-item-control has-feedback has-success"
      >
        <input
          class="wmstool-input"
          id="success"
          placeholder="I'm the content"
          type="text"
        />
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-label wmstool-col-xs-24 wmstool-col-sm-5"
    >
      <label
        class=""
        title="Warning"
      >
        Warning
      </label>
    </div>
    <div
      class="wmstool-form-item-control-wrapper wmstool-col-xs-24 wmstool-col-sm-12"
    >
      <div
        class="wmstool-form-item-control has-feedback has-warning"
      >
        <input
          class="wmstool-input"
          id="warning"
          placeholder="Warning"
          type="text"
        />
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item wmstool-form-item-with-help"
  >
    <div
      class="wmstool-form-item-label wmstool-col-xs-24 wmstool-col-sm-5"
    >
      <label
        class=""
        title="Fail"
      >
        Fail
      </label>
    </div>
    <div
      class="wmstool-form-item-control-wrapper wmstool-col-xs-24 wmstool-col-sm-12"
    >
      <div
        class="wmstool-form-item-control has-feedback has-error"
      >
        <input
          class="wmstool-input"
          id="error"
          placeholder="unavailable choice"
          type="text"
        />
        <div
          class="wmstool-form-explain"
        >
          Should be combination of numbers & alphabets
        </div>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-label wmstool-col-xs-24 wmstool-col-sm-5"
    >
      <label
        class=""
        title="Success"
      >
        Success
      </label>
    </div>
    <div
      class="wmstool-form-item-control-wrapper wmstool-col-xs-24 wmstool-col-sm-12"
    >
      <div
        class="wmstool-form-item-control has-feedback has-success"
      >
        <span
          class="wmstool-calendar-picker"
          style="width:100%"
        >
          <div>
            <input
              class="wmstool-calendar-picker-input wmstool-input"
              placeholder="Select date"
              readonly=""
              value=""
            />
            <span
              class="wmstool-calendar-picker-icon"
            />
          </div>
        </span>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-label wmstool-col-xs-24 wmstool-col-sm-5"
    >
      <label
        class=""
        title="Warning"
      >
        Warning
      </label>
    </div>
    <div
      class="wmstool-form-item-control-wrapper wmstool-col-xs-24 wmstool-col-sm-12"
    >
      <div
        class="wmstool-form-item-control has-feedback has-warning"
      >
        <span
          class="wmstool-time-picker "
          style="width:100%"
        >
          <input
            class="wmstool-time-picker-input"
            placeholder="Select time"
            type="text"
            value=""
          />
          <span
            class="wmstool-time-picker-icon"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-label wmstool-col-xs-24 wmstool-col-sm-5"
    >
      <label
        class=""
        title="Error"
      >
        Error
      </label>
    </div>
    <div
      class="wmstool-form-item-control-wrapper wmstool-col-xs-24 wmstool-col-sm-12"
    >
      <div
        class="wmstool-form-item-control has-feedback has-error"
      >
        <div
          class="wmstool-select wmstool-select-enabled"
        >
          <div
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="wmstool-select-selection
            wmstool-select-selection--single"
            role="combobox"
            tabindex="0"
          >
            <div
              class="wmstool-select-selection__rendered"
            >
              <div
                class="wmstool-select-selection-selected-value"
                style="display:block;opacity:1"
                title="Option 1"
              >
                Option 1
              </div>
            </div>
            <span
              class="wmstool-select-arrow"
              style="user-select:none;-webkit-user-select:none"
              unselectable="unselectable"
            >
              <b />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item wmstool-form-item-with-help"
  >
    <div
      class="wmstool-form-item-label wmstool-col-xs-24 wmstool-col-sm-5"
    >
      <label
        class=""
        title="Validating"
      >
        Validating
      </label>
    </div>
    <div
      class="wmstool-form-item-control-wrapper wmstool-col-xs-24 wmstool-col-sm-12"
    >
      <div
        class="wmstool-form-item-control has-feedback is-validating"
      >
        <span
          class="wmstool-cascader-picker"
          tabindex="0"
        >
          <span
            class="wmstool-cascader-picker-label"
          />
          <input
            autocomplete="off"
            class="wmstool-input wmstool-cascader-input "
            readonly=""
            type="text"
            value=""
          />
          <i
            class="anticon anticon-cross-circle wmstool-cascader-picker-clear"
          />
          <i
            class="anticon anticon-down wmstool-cascader-picker-arrow"
          />
        </span>
        <div
          class="wmstool-form-explain"
        >
          The information is being validated...
        </div>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-label wmstool-col-xs-24 wmstool-col-sm-5"
    >
      <label
        class=""
        title="inline"
      >
        inline
      </label>
    </div>
    <div
      class="wmstool-form-item-control-wrapper wmstool-col-xs-24 wmstool-col-sm-12"
    >
      <div
        class="wmstool-form-item-control "
      >
        <div
          class="wmstool-col-11"
        >
          <div
            class="wmstool-row wmstool-form-item wmstool-form-item-with-help"
          >
            <div
              class="wmstool-form-item-control-wrapper"
            >
              <div
                class="wmstool-form-item-control has-error"
              >
                <span
                  class="wmstool-calendar-picker"
                >
                  <div>
                    <input
                      class="wmstool-calendar-picker-input wmstool-input"
                      placeholder="Select date"
                      readonly=""
                      value=""
                    />
                    <span
                      class="wmstool-calendar-picker-icon"
                    />
                  </div>
                </span>
                <div
                  class="wmstool-form-explain"
                >
                  Please select the correct date
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="wmstool-col-2"
        >
          <span
            style="display:inline-block;width:100%;text-align:center"
          >
            -
          </span>
        </div>
        <div
          class="wmstool-col-11"
        >
          <div
            class="wmstool-row wmstool-form-item"
          >
            <div
              class="wmstool-form-item-control-wrapper"
            >
              <div
                class="wmstool-form-item-control "
              >
                <span
                  class="wmstool-calendar-picker"
                >
                  <div>
                    <input
                      class="wmstool-calendar-picker-input wmstool-input"
                      placeholder="Select date"
                      readonly=""
                      value=""
                    />
                    <span
                      class="wmstool-calendar-picker-icon"
                    />
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="wmstool-row wmstool-form-item"
  >
    <div
      class="wmstool-form-item-label wmstool-col-xs-24 wmstool-col-sm-5"
    >
      <label
        class=""
        title="Success"
      >
        Success
      </label>
    </div>
    <div
      class="wmstool-form-item-control-wrapper wmstool-col-xs-24 wmstool-col-sm-12"
    >
      <div
        class="wmstool-form-item-control has-feedback has-success"
      >
        <div
          class="wmstool-input-number"
          style="width:100%"
        >
          <div
            class="wmstool-input-number-handler-wrap"
          >
            <span
              aria-disabled="false"
              aria-label="Increase Value"
              class="wmstool-input-number-handler wmstool-input-number-handler-up "
              role="button"
              unselectable="unselectable"
            >
              <span
                class="wmstool-input-number-handler-up-inner"
                unselectable="unselectable"
              />
            </span>
            <span
              aria-disabled="false"
              aria-label="Decrease Value"
              class="wmstool-input-number-handler wmstool-input-number-handler-down "
              role="button"
              unselectable="unselectable"
            >
              <span
                class="wmstool-input-number-handler-down-inner"
                unselectable="unselectable"
              />
            </span>
          </div>
          <div
            aria-valuemin="-9007199254740991"
            class="wmstool-input-number-input-wrap"
            role="spinbutton"
          >
            <input
              autocomplete="off"
              class="wmstool-input-number-input"
              min="-9007199254740991"
              step="1"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`renders ./components/form/demo/without-form-create.md correctly 1`] = `
<form
  class="wmstool-form wmstool-form-horizontal"
>
  <div
    class="wmstool-row wmstool-form-item wmstool-form-item-with-help"
  >
    <div
      class="wmstool-col-7 wmstool-form-item-label"
    >
      <label
        class=""
        title="Prime between 8 & 12"
      >
        Prime between 8 & 12
      </label>
    </div>
    <div
      class="wmstool-col-12 wmstool-form-item-control-wrapper"
    >
      <div
        class="wmstool-form-item-control "
      >
        <div
          class="wmstool-input-number"
        >
          <div
            class="wmstool-input-number-handler-wrap"
          >
            <span
              aria-disabled="false"
              aria-label="Increase Value"
              class="wmstool-input-number-handler wmstool-input-number-handler-up "
              role="button"
              unselectable="unselectable"
            >
              <span
                class="wmstool-input-number-handler-up-inner"
                unselectable="unselectable"
              />
            </span>
            <span
              aria-disabled="false"
              aria-label="Decrease Value"
              class="wmstool-input-number-handler wmstool-input-number-handler-down "
              role="button"
              unselectable="unselectable"
            >
              <span
                class="wmstool-input-number-handler-down-inner"
                unselectable="unselectable"
              />
            </span>
          </div>
          <div
            aria-valuemax="12"
            aria-valuemin="8"
            aria-valuenow="11"
            class="wmstool-input-number-input-wrap"
            role="spinbutton"
          >
            <input
              autocomplete="off"
              class="wmstool-input-number-input"
              max="12"
              min="8"
              step="1"
              value="11"
            />
          </div>
        </div>
        <div
          class="wmstool-form-explain"
        >
          A prime is a natural number greater than 1 that has no positive divisors other than 1 and itself.
        </div>
      </div>
    </div>
  </div>
</form>
`;
